test/samples/error/err_invalid_vector_index_float.w
var x = [1,2,3,4,5]
x[1.0] = 1